--- a/settings.yaml
+++ b/settings.yaml
@@ -1,6 +1,6 @@
 ---
 #Project configuration
-s2s_path: "S://"
+project_path: "S://"
 #Files
 httpx_ips: "http_from.ips.output.json"
 httpx_domains: "http_from.domains.output.json"
