--- a/settings.yaml
+++ b/settings.yaml
@@ -1,11 +1,14 @@
 ---
 #Project configuration
-project_path: "S://"
+projects_path: "M://projects"
 #Files
-httpx_ips: "http_from.ips.output.json"
+dpux: "dpux.{project_name}.output.json"
+dpux_xml: "dpux.xml"
+dpux_ip: "dpux_clean.txt"
+host_mapping: "dpux_host_to_ip.json"
 httpx_domains: "http_from.domains.output.json"
+httpx_ips: "http_from.ips.output.json"
 httpx_clean: "http_from.clean.output.json"
-dpux: "dpux_clean.json"
-dnsmx: "dpux.{project_name}.output.json"
 ports_xml: "ports.{project_name}.output.xml"
 ports_simple: "unique_open_ports.json"
+services_file: "services.json"
